tests/regexp/regexp.exp
Error ----------------------------------------------------------- regexp.js:2:20

Cannot assign `patt.test(...)` to `match` because boolean [1] is incompatible
with number [2].



Found 1 error
